<resources>
    <string name="app_name">Smart Store</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="account">Account</string>
    <string name="search">search</string>
    <string name="inputTextViewSearch">inputTextViewSearch</string>
    <string name="TitleHome">Smart Store</string>
    <string name="TitleCatalog">Каталог</string>
    <string name="TitleCart">Корзина</string>
    <string name="TitleWishList">Список желаний</string>
    <string name="TitleAccount">Профиль</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="news_image">news image</string>
    <string name="news">Новости</string>
    <string name="categories">Категории</string>
    <string name="popular_products">Популярные продукты</string>
    <string name="product_image">Product Image</string>
    <string name="like_product">Like Product</string>
    <string name="test">Test</string>

    <!--    <string name="api_server">http://127.0.0.1:8000/api/</string>-->
    <string name="api_server">http://10.0.2.2:8000/api/</string>
    <string name="login">user/login</string>
    <string name="register">user/register</string>
    <string name="logout">user/logout</string>
    <string name="userData">user/me</string>
    <string name="updateUserData">user/update</string>

    <string name="getWishlist">user/wishlist/my_wishlist</string>
    <string name="addToWishlist">user/wishlist/add_product</string>
    <string name="deleteFromWishlist">user/wishlist/delete_product</string>

    <string name="getCart">user/cart/my_cart</string>
    <string name="addToCart">user/cart/add_product</string>
    <string name="updateInCart">user/cart/update_product</string>
    <string name="deleteFromCart">user/cart/delete_product</string>

    <string name="getCategories">catalog/categories</string>
    <string name="getSubcategories">catalog/subcategories</string>
    <string name="getAllSubcategories">catalog/all_subcategories</string>
    <string name="getBrands">catalog/brands</string>

    <string name="getAllNews">catalog/news</string>
    <string name="getOneNews">catalog/one_news?news_id=</string>

    <string name="getAllProducts">catalog/all</string>
    <string name="getCategoryProducts">catalog/category?category_id=</string>
    <string name="getSubcategoryProducts">catalog/subcategory?subcategory_id=</string>
    <string name="getBrandProducts">catalog/brand?brand_id=</string>
    <string name="getOneProduct">catalog/product?product_id=</string>

    <string name="getOrders">user/order/all</string>
    <string name="getOrder">user/order/my_order</string>
    <string name="createOrder">user/order/create_order</string>
    <!--    <string name="updateOrder">user/order/update_order</string>-->
    <string name="deleteOrder">user/order/delete_order</string>
    <!--    <string name="createPaymentIntent">user/order/create_payment_intent</string>-->

</resources>