<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/White"
    android:backgroundTint="@color/colorMainBG">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="@font/lexend"
            android:text="@string/news"
            android:textColor="@color/colorSecondary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:itemCount="2"
            tools:listitem="@layout/grid_item_news" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="@font/lexend"
            android:text="@string/categories"
            android:textColor="@color/colorSecondary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fastProductCategoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:itemCount="2"
            tools:listitem="@layout/grid_item_categories" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="@font/lexend"
            android:text="@string/popular_products"
            android:textColor="@color/colorSecondary" />


        <GridView
            android:id="@+id/popularProductsGridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/colorMainBG"
            android:horizontalSpacing="@dimen/gridBorderWidth"
            android:numColumns="2"
            android:scrollbars="none"
            android:verticalSpacing="@dimen/gridBorderWidth"
            tools:listitem="@layout/grid_item_product" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>